--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   	</g>
   </g>
 </svg>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
 
 
 
