--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <svg class="logoSVG" version="1.1"
-	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 474 429" preserveAspectRatio="xMidYMid meet" >
+	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 474 429" preserveAspectRatio="xMidYMid meet" style="text-align:center;" >
 <defs>
 </defs>
   <g class="logoWholeBird">
