--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 						<div class="main-content" style="color:#fff">
 
 
-							<div>
+							<div style="margin-left: -100px;">
 								<svg class="logoSVG" version="1.1"
-								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 474 429" preserveAspectRatio="xMidYMid meet" style="text-align:center;" >
+								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 474 250" preserveAspectRatio="xMidYMid meet" style="text-align:center;" >
 								<defs>
 								</defs>
 								<g class="logoWholeBird">
@@ -101,125 +101,146 @@
 										<g id="driftTextGroup_1_">
 											<g id="driftTextGroup_2_">
 												<!-- <g>
-													<path class="st1" d="M60.3,371.8v6.2c-3-2.5-6.2-3.8-9.4-3.8c-3.6,0-6.6,1.3-9,3.9c-2.5,2.5-3.7,5.7-3.7,9.4
-													c0,3.7,1.2,6.7,3.7,9.2c2.5,2.5,5.5,3.8,9.1,3.8c1.8,0,3.4-0.3,4.7-0.9c0.7-0.3,1.5-0.7,2.3-1.2c0.8-0.5,1.6-1.1,2.5-1.8v6.4
-													c-3,1.7-6.2,2.5-9.5,2.5c-5,0-9.2-1.7-12.7-5.2c-3.5-3.5-5.3-7.7-5.3-12.7c0-4.4,1.5-8.4,4.4-11.9c3.6-4.2,8.3-6.4,14-6.4
-													C54.4,369.3,57.4,370.2,60.3,371.8z"/>
-													<path class="st1" d="M65,393.7c0-3.2,1.1-5.9,3.4-8.1c2.3-2.2,5-3.3,8.3-3.3s6.1,1.1,8.3,3.4c2.3,2.3,3.4,5,3.4,8.3
-													c0,3.3-1.1,6.1-3.4,8.3c-2.3,2.2-5.1,3.3-8.4,3.3s-6.1-1.1-8.3-3.4C66.1,399.8,65,397,65,393.7z M70.1,393.7
-													c0,2.2,0.6,3.9,1.8,5.2c1.2,1.3,2.8,1.9,4.8,1.9c2,0,3.6-0.6,4.8-1.9c1.2-1.3,1.8-3,1.8-5.1s-0.6-3.8-1.8-5.1s-2.8-1.9-4.8-1.9
-													c-1.9,0-3.5,0.6-4.7,1.9C70.8,390,70.1,391.7,70.1,393.7z"/>
-													<path class="st1" d="M93.8,382.8h5.1v2c1-1,1.8-1.7,2.5-2.1c0.7-0.4,1.7-0.6,2.8-0.6c2.5,0,4.4,1.1,5.9,3.2
-													c1.6-2.2,3.7-3.2,6.5-3.2c4.9,0,7.4,3,7.4,9v13.6h-5.1v-12.2c0-2.1-0.3-3.6-0.8-4.5c-0.5-0.9-1.4-1.3-2.6-1.3
-													c-1.4,0-2.4,0.5-3,1.6c-0.6,1.1-1,2.8-1,5.1v11.4h-5.1v-12.1c0-3.9-1.1-5.9-3.4-5.9c-1.4,0-2.5,0.5-3.1,1.6
-													c-0.6,1.1-1,2.8-1,5.1v11.4h-5.1L93.8,382.8L93.8,382.8z"/>
-													<path class="st1" d="M129.5,373.7c0-0.9,0.3-1.7,1-2.3c0.6-0.6,1.4-1,2.3-1c0.9,0,1.7,0.3,2.3,1c0.6,0.6,1,1.4,1,2.3
-													c0,0.9-0.3,1.7-1,2.3c-0.6,0.6-1.4,1-2.3,1s-1.7-0.3-2.3-1C129.9,375.4,129.5,374.6,129.5,373.7z M135.4,382.8v22h-5.1v-22
-													H135.4z"/>
-													<path class="st1" d="M141.8,382.8h5.1v2c1.8-1.8,3.8-2.6,6-2.6c2.5,0,4.5,0.8,6,2.4c1.2,1.4,1.8,3.6,1.8,6.7v13.5h-5.1v-12.3
-													c0-2.2-0.3-3.7-0.9-4.5c-0.6-0.8-1.7-1.3-3.2-1.3c-1.7,0-2.9,0.6-3.6,1.7c-0.7,1.1-1,3-1,5.8v10.6h-5.1V382.8z"/>
-													<path class="st1" d="M188.4,404.3c0,1,0,2-0.1,2.8c-0.1,0.8-0.2,1.5-0.3,2.1c-0.4,1.7-1.1,3.1-2.1,4.3c-2,2.3-4.7,3.4-8.2,3.4
-													c-2.9,0-5.4-0.8-7.2-2.4c-2-1.6-3.1-3.9-3.4-6.7h5.1c0.2,1.1,0.5,1.9,1,2.5c1.1,1.4,2.6,2,4.6,2c3.7,0,5.6-2.3,5.6-6.8v-3.1
-													c-2,2-4.3,3.1-7,3.1c-3,0-5.4-1.1-7.3-3.2c-1.9-2.2-2.9-4.9-2.9-8.2c0-3.2,0.9-5.9,2.7-8.2c1.9-2.4,4.5-3.6,7.6-3.6
-													c2.8,0,5.1,1,6.9,3.1v-2.5h5.1L188.4,404.3L188.4,404.3z M183.5,393.9c0-2.1-0.6-3.8-1.7-5.1c-1.2-1.3-2.6-2-4.4-2
-													c-1.9,0-3.5,0.7-4.6,2.1c-1,1.3-1.5,2.9-1.5,5c0,2,0.5,3.6,1.5,4.9c1.1,1.4,2.6,2.1,4.6,2.1c2,0,3.5-0.7,4.6-2.1
-													C183,397.5,183.5,395.9,183.5,393.9z"/>
-													<path class="st1" d="M229.7,375.2l-4.3,2.5c-0.8-1.4-1.6-2.3-2.3-2.7c-0.8-0.5-1.7-0.7-2.9-0.7c-1.5,0-2.7,0.4-3.6,1.2
-													c-1,0.8-1.4,1.8-1.4,3.1c0,1.7,1.3,3.1,3.8,4.1l3.5,1.4c2.8,1.1,4.9,2.5,6.2,4.2c1.3,1.6,2,3.7,2,6.1c0,3.2-1.1,5.9-3.2,7.9
-													c-2.1,2.1-4.8,3.2-8,3.2c-3,0-5.5-0.9-7.5-2.7c-1.9-1.8-3.2-4.3-3.6-7.6l5.3-1.2c0.2,2,0.7,3.5,1.3,4.2c1.1,1.5,2.7,2.3,4.7,2.3
-													c1.6,0,3-0.6,4.1-1.6c1.1-1.1,1.6-2.5,1.6-4.2c0-0.7-0.1-1.3-0.3-1.9c-0.2-0.6-0.5-1.1-0.9-1.6c-0.4-0.5-0.9-0.9-1.6-1.3
-													c-0.6-0.4-1.4-0.8-2.3-1.2l-3.4-1.4c-4.8-2-7.1-5-7.1-8.8c0-2.6,1-4.8,3-6.6c2-1.8,4.5-2.7,7.5-2.7
-													C224.3,369.3,227.5,371.3,229.7,375.2z"/>
-													<path class="st1" d="M234.9,393.7c0-3.2,1.1-5.9,3.4-8.1c2.3-2.2,5-3.3,8.3-3.3c3.3,0,6.1,1.1,8.3,3.4c2.3,2.3,3.4,5,3.4,8.3
-													c0,3.3-1.1,6.1-3.4,8.3c-2.3,2.2-5.1,3.3-8.4,3.3c-3.3,0-6.1-1.1-8.3-3.4C236,399.8,234.9,397,234.9,393.7z M240.1,393.7
-													c0,2.2,0.6,3.9,1.8,5.2c1.2,1.3,2.8,1.9,4.8,1.9c2,0,3.6-0.6,4.8-1.9c1.2-1.3,1.8-3,1.8-5.1s-0.6-3.8-1.8-5.1
-													c-1.2-1.3-2.8-1.9-4.8-1.9c-1.9,0-3.5,0.6-4.7,1.9C240.7,390,240.1,391.7,240.1,393.7z"/>
-													<path class="st1" d="M262.7,393.7c0-3.2,1.1-5.9,3.4-8.1c2.3-2.2,5-3.3,8.3-3.3s6.1,1.1,8.3,3.4c2.3,2.3,3.4,5,3.4,8.3
-													c0,3.3-1.1,6.1-3.4,8.3c-2.3,2.2-5.1,3.3-8.4,3.3c-3.3,0-6.1-1.1-8.3-3.4C263.8,399.8,262.7,397,262.7,393.7z M267.9,393.7
-													c0,2.2,0.6,3.9,1.8,5.2c1.2,1.3,2.8,1.9,4.8,1.9s3.6-0.6,4.8-1.9c1.2-1.3,1.8-3,1.8-5.1s-0.6-3.8-1.8-5.1
-													c-1.2-1.3-2.8-1.9-4.8-1.9c-1.9,0-3.5,0.6-4.7,1.9C268.5,390,267.9,391.7,267.9,393.7z"/>
-													<path class="st1" d="M291.5,382.8h5.1v2c1.8-1.8,3.8-2.6,6-2.6c2.5,0,4.5,0.8,6,2.4c1.2,1.4,1.8,3.6,1.8,6.7v13.5h-5.1v-12.3
-													c0-2.2-0.3-3.7-0.9-4.5c-0.6-0.8-1.7-1.3-3.2-1.3c-1.7,0-2.9,0.6-3.6,1.7c-0.7,1.1-1,3-1,5.8v10.6h-5.1V382.8z"/>
-												</g> -->
-											</g>
-										</g>
-										<g>
-											<path class="st0" d="M34.4,289.7H15.6v13h18.2v7.7H15.6v25.7H7.4v-54h27V289.7z"/>
-											<path class="st0" d="M50.2,277v59.1h-7.9V277H50.2z"/>
-											<path class="st0" d="M71.6,329.8L56.2,302h9.1l10.4,19.6l9.7-19.6h8.9l-27.2,52.6h-9L71.6,329.8z"/>
-											<path class="st0" d="M129.7,320.9h-24.4c0.2,2.8,1.1,5,2.7,6.7c1.6,1.6,3.7,2.5,6.2,2.5c2,0,3.6-0.5,4.9-1.4
-											c1.3-0.9,2.7-2.7,4.3-5.2l6.7,3.7c-1,1.8-2.1,3.2-3.3,4.5c-1.1,1.2-2.4,2.3-3.7,3.1c-1.3,0.8-2.7,1.4-4.2,1.8
-											c-1.5,0.4-3.2,0.6-4.9,0.6c-5.1,0-9.2-1.6-12.3-4.9c-3.1-3.3-4.6-7.7-4.6-13.1c0-5.4,1.5-9.8,4.5-13.1c3-3.3,7-4.9,12-4.9
-											c5,0,9,1.6,11.9,4.8c2.9,3.2,4.3,7.6,4.3,13.2L129.7,320.9z M121.6,314.5c-1.1-4.2-3.7-6.3-7.9-6.3c-1,0-1.9,0.1-2.7,0.4
-											c-0.8,0.3-1.6,0.7-2.3,1.3c-0.7,0.5-1.3,1.2-1.8,2c-0.5,0.8-0.9,1.6-1.1,2.6H121.6z"/>
-											<path class="st0" d="M138.3,302h7.9v3c1.4-1.5,2.7-2.6,3.9-3.1c1.1-0.6,2.5-0.9,4.1-0.9c2.1,0,4.2,0.7,6.5,2l-3.6,7.2
-											c-1.5-1.1-3-1.6-4.4-1.6c-4.3,0-6.4,3.2-6.4,9.7v17.7h-7.9V302z"/>
-											<path class="st0" d="M184.9,307.8l-6.5,3.5c-1-2.1-2.3-3.1-3.8-3.1c-0.7,0-1.3,0.2-1.9,0.7c-0.5,0.5-0.8,1.1-0.8,1.8
-											c0,1.3,1.5,2.6,4.6,3.9c4.2,1.8,7,3.5,8.4,5c1.4,1.5,2.2,3.6,2.2,6.1c0,3.3-1.2,6-3.6,8.3c-2.4,2.1-5.2,3.2-8.5,3.2
-											c-5.7,0-9.8-2.8-12.1-8.4l6.7-3.1c0.9,1.6,1.6,2.7,2.1,3.1c1,0.9,2.1,1.3,3.4,1.3c2.7,0,4-1.2,4-3.6c0-1.4-1-2.7-3.1-3.9
-											c-0.8-0.4-1.6-0.8-2.4-1.2c-0.8-0.4-1.6-0.8-2.4-1.2c-2.3-1.1-3.9-2.2-4.8-3.4c-1.2-1.4-1.8-3.3-1.8-5.5c0-3,1-5.4,3-7.4
-											c2.1-1.9,4.6-2.9,7.6-2.9C179.6,301.1,182.8,303.3,184.9,307.8z"/>
-											<path class="st0" d="M248.4,290.1l-6.6,3.9c-1.2-2.1-2.4-3.5-3.5-4.2c-1.2-0.7-2.7-1.1-4.5-1.1c-2.3,0-4.1,0.6-5.6,1.9
-											c-1.5,1.3-2.2,2.8-2.2,4.8c0,2.6,2,4.8,5.9,6.4l5.4,2.2c4.4,1.8,7.6,3.9,9.6,6.5c2,2.6,3,5.7,3,9.4c0,5-1.7,9.1-5,12.3
-											c-3.3,3.3-7.5,4.9-12.4,4.9c-4.7,0-8.6-1.4-11.6-4.2c-3-2.8-4.9-6.7-5.6-11.7l8.3-1.8c0.4,3.2,1,5.4,2,6.6
-											c1.7,2.3,4.1,3.5,7.4,3.5c2.5,0,4.7-0.9,6.3-2.6c1.7-1.7,2.5-3.9,2.5-6.5c0-1-0.1-2-0.4-2.9s-0.7-1.7-1.4-2.4
-											c-0.6-0.7-1.4-1.4-2.4-2.1c-1-0.6-2.1-1.3-3.5-1.8l-5.2-2.2c-7.4-3.1-11.1-7.7-11.1-13.7c0-4.1,1.6-7.5,4.7-10.2
-											c3.1-2.8,7-4.1,11.6-4.1C240,281,244.9,284.1,248.4,290.1z"/>
-											<path class="st0" d="M256.5,318.8c0-4.9,1.8-9.1,5.3-12.6c3.5-3.5,7.8-5.2,12.9-5.2c5.1,0,9.4,1.7,13,5.2
-											c3.5,3.5,5.3,7.7,5.3,12.8c0,5.1-1.8,9.4-5.3,12.8c-3.5,3.4-7.9,5.1-13.1,5.1c-5.1,0-9.4-1.8-12.8-5.3
-											C258.2,328.4,256.5,324.1,256.5,318.8z M264.6,319c0,3.4,0.9,6.1,2.7,8.1c1.9,2,4.3,3,7.4,3c3.1,0,5.5-1,7.4-3
-											c1.8-2,2.8-4.6,2.8-7.9c0-3.3-0.9-6-2.8-7.9c-1.9-2-4.3-3-7.4-3c-3,0-5.4,1-7.3,3S264.6,315.8,264.6,319z"/>
-											<path class="st0" d="M309.4,309.4v26.7h-7.9v-26.7h-2.8V302h2.8v-13.2c0-4.3,0.7-7.3,2.2-9.1c2.1-2.5,5-3.7,9-3.7
-											c1.4,0,3.2,0.4,5.3,1.2v8.1l-0.8-0.4c-1.7-0.9-3.1-1.3-4.2-1.3c-1.4,0-2.3,0.5-2.8,1.5c-0.5,1-0.7,2.9-0.7,5.7V302h8.6v7.4H309.4z
-											"/>
-											<path class="st0" d="M333.2,309.4v26.7h-7.9v-26.7H322V302h3.4v-12.5h7.9V302h6.1v7.4H333.2z"/>
+												<path class="st1" d="M60.3,371.8v6.2c-3-2.5-6.2-3.8-9.4-3.8c-3.6,0-6.6,1.3-9,3.9c-2.5,2.5-3.7,5.7-3.7,9.4
+												c0,3.7,1.2,6.7,3.7,9.2c2.5,2.5,5.5,3.8,9.1,3.8c1.8,0,3.4-0.3,4.7-0.9c0.7-0.3,1.5-0.7,2.3-1.2c0.8-0.5,1.6-1.1,2.5-1.8v6.4
+												c-3,1.7-6.2,2.5-9.5,2.5c-5,0-9.2-1.7-12.7-5.2c-3.5-3.5-5.3-7.7-5.3-12.7c0-4.4,1.5-8.4,4.4-11.9c3.6-4.2,8.3-6.4,14-6.4
+												C54.4,369.3,57.4,370.2,60.3,371.8z"/>
+												<path class="st1" d="M65,393.7c0-3.2,1.1-5.9,3.4-8.1c2.3-2.2,5-3.3,8.3-3.3s6.1,1.1,8.3,3.4c2.3,2.3,3.4,5,3.4,8.3
+												c0,3.3-1.1,6.1-3.4,8.3c-2.3,2.2-5.1,3.3-8.4,3.3s-6.1-1.1-8.3-3.4C66.1,399.8,65,397,65,393.7z M70.1,393.7
+												c0,2.2,0.6,3.9,1.8,5.2c1.2,1.3,2.8,1.9,4.8,1.9c2,0,3.6-0.6,4.8-1.9c1.2-1.3,1.8-3,1.8-5.1s-0.6-3.8-1.8-5.1s-2.8-1.9-4.8-1.9
+												c-1.9,0-3.5,0.6-4.7,1.9C70.8,390,70.1,391.7,70.1,393.7z"/>
+												<path class="st1" d="M93.8,382.8h5.1v2c1-1,1.8-1.7,2.5-2.1c0.7-0.4,1.7-0.6,2.8-0.6c2.5,0,4.4,1.1,5.9,3.2
+												c1.6-2.2,3.7-3.2,6.5-3.2c4.9,0,7.4,3,7.4,9v13.6h-5.1v-12.2c0-2.1-0.3-3.6-0.8-4.5c-0.5-0.9-1.4-1.3-2.6-1.3
+												c-1.4,0-2.4,0.5-3,1.6c-0.6,1.1-1,2.8-1,5.1v11.4h-5.1v-12.1c0-3.9-1.1-5.9-3.4-5.9c-1.4,0-2.5,0.5-3.1,1.6
+												c-0.6,1.1-1,2.8-1,5.1v11.4h-5.1L93.8,382.8L93.8,382.8z"/>
+												<path class="st1" d="M129.5,373.7c0-0.9,0.3-1.7,1-2.3c0.6-0.6,1.4-1,2.3-1c0.9,0,1.7,0.3,2.3,1c0.6,0.6,1,1.4,1,2.3
+												c0,0.9-0.3,1.7-1,2.3c-0.6,0.6-1.4,1-2.3,1s-1.7-0.3-2.3-1C129.9,375.4,129.5,374.6,129.5,373.7z M135.4,382.8v22h-5.1v-22
+												H135.4z"/>
+												<path class="st1" d="M141.8,382.8h5.1v2c1.8-1.8,3.8-2.6,6-2.6c2.5,0,4.5,0.8,6,2.4c1.2,1.4,1.8,3.6,1.8,6.7v13.5h-5.1v-12.3
+												c0-2.2-0.3-3.7-0.9-4.5c-0.6-0.8-1.7-1.3-3.2-1.3c-1.7,0-2.9,0.6-3.6,1.7c-0.7,1.1-1,3-1,5.8v10.6h-5.1V382.8z"/>
+												<path class="st1" d="M188.4,404.3c0,1,0,2-0.1,2.8c-0.1,0.8-0.2,1.5-0.3,2.1c-0.4,1.7-1.1,3.1-2.1,4.3c-2,2.3-4.7,3.4-8.2,3.4
+												c-2.9,0-5.4-0.8-7.2-2.4c-2-1.6-3.1-3.9-3.4-6.7h5.1c0.2,1.1,0.5,1.9,1,2.5c1.1,1.4,2.6,2,4.6,2c3.7,0,5.6-2.3,5.6-6.8v-3.1
+												c-2,2-4.3,3.1-7,3.1c-3,0-5.4-1.1-7.3-3.2c-1.9-2.2-2.9-4.9-2.9-8.2c0-3.2,0.9-5.9,2.7-8.2c1.9-2.4,4.5-3.6,7.6-3.6
+												c2.8,0,5.1,1,6.9,3.1v-2.5h5.1L188.4,404.3L188.4,404.3z M183.5,393.9c0-2.1-0.6-3.8-1.7-5.1c-1.2-1.3-2.6-2-4.4-2
+												c-1.9,0-3.5,0.7-4.6,2.1c-1,1.3-1.5,2.9-1.5,5c0,2,0.5,3.6,1.5,4.9c1.1,1.4,2.6,2.1,4.6,2.1c2,0,3.5-0.7,4.6-2.1
+												C183,397.5,183.5,395.9,183.5,393.9z"/>
+												<path class="st1" d="M229.7,375.2l-4.3,2.5c-0.8-1.4-1.6-2.3-2.3-2.7c-0.8-0.5-1.7-0.7-2.9-0.7c-1.5,0-2.7,0.4-3.6,1.2
+												c-1,0.8-1.4,1.8-1.4,3.1c0,1.7,1.3,3.1,3.8,4.1l3.5,1.4c2.8,1.1,4.9,2.5,6.2,4.2c1.3,1.6,2,3.7,2,6.1c0,3.2-1.1,5.9-3.2,7.9
+												c-2.1,2.1-4.8,3.2-8,3.2c-3,0-5.5-0.9-7.5-2.7c-1.9-1.8-3.2-4.3-3.6-7.6l5.3-1.2c0.2,2,0.7,3.5,1.3,4.2c1.1,1.5,2.7,2.3,4.7,2.3
+												c1.6,0,3-0.6,4.1-1.6c1.1-1.1,1.6-2.5,1.6-4.2c0-0.7-0.1-1.3-0.3-1.9c-0.2-0.6-0.5-1.1-0.9-1.6c-0.4-0.5-0.9-0.9-1.6-1.3
+												c-0.6-0.4-1.4-0.8-2.3-1.2l-3.4-1.4c-4.8-2-7.1-5-7.1-8.8c0-2.6,1-4.8,3-6.6c2-1.8,4.5-2.7,7.5-2.7
+												C224.3,369.3,227.5,371.3,229.7,375.2z"/>
+												<path class="st1" d="M234.9,393.7c0-3.2,1.1-5.9,3.4-8.1c2.3-2.2,5-3.3,8.3-3.3c3.3,0,6.1,1.1,8.3,3.4c2.3,2.3,3.4,5,3.4,8.3
+												c0,3.3-1.1,6.1-3.4,8.3c-2.3,2.2-5.1,3.3-8.4,3.3c-3.3,0-6.1-1.1-8.3-3.4C236,399.8,234.9,397,234.9,393.7z M240.1,393.7
+												c0,2.2,0.6,3.9,1.8,5.2c1.2,1.3,2.8,1.9,4.8,1.9c2,0,3.6-0.6,4.8-1.9c1.2-1.3,1.8-3,1.8-5.1s-0.6-3.8-1.8-5.1
+												c-1.2-1.3-2.8-1.9-4.8-1.9c-1.9,0-3.5,0.6-4.7,1.9C240.7,390,240.1,391.7,240.1,393.7z"/>
+												<path class="st1" d="M262.7,393.7c0-3.2,1.1-5.9,3.4-8.1c2.3-2.2,5-3.3,8.3-3.3s6.1,1.1,8.3,3.4c2.3,2.3,3.4,5,3.4,8.3
+												c0,3.3-1.1,6.1-3.4,8.3c-2.3,2.2-5.1,3.3-8.4,3.3c-3.3,0-6.1-1.1-8.3-3.4C263.8,399.8,262.7,397,262.7,393.7z M267.9,393.7
+												c0,2.2,0.6,3.9,1.8,5.2c1.2,1.3,2.8,1.9,4.8,1.9s3.6-0.6,4.8-1.9c1.2-1.3,1.8-3,1.8-5.1s-0.6-3.8-1.8-5.1
+												c-1.2-1.3-2.8-1.9-4.8-1.9c-1.9,0-3.5,0.6-4.7,1.9C268.5,390,267.9,391.7,267.9,393.7z"/>
+												<path class="st1" d="M291.5,382.8h5.1v2c1.8-1.8,3.8-2.6,6-2.6c2.5,0,4.5,0.8,6,2.4c1.2,1.4,1.8,3.6,1.8,6.7v13.5h-5.1v-12.3
+												c0-2.2-0.3-3.7-0.9-4.5c-0.6-0.8-1.7-1.3-3.2-1.3c-1.7,0-2.9,0.6-3.6,1.7c-0.7,1.1-1,3-1,5.8v10.6h-5.1V382.8z"/>
+											</g> -->
 										</g>
 									</g>
-								</svg>
+									<g>
+										<path class="st0" d="M34.4,289.7H15.6v13h18.2v7.7H15.6v25.7H7.4v-54h27V289.7z"/>
+										<path class="st0" d="M50.2,277v59.1h-7.9V277H50.2z"/>
+										<path class="st0" d="M71.6,329.8L56.2,302h9.1l10.4,19.6l9.7-19.6h8.9l-27.2,52.6h-9L71.6,329.8z"/>
+										<path class="st0" d="M129.7,320.9h-24.4c0.2,2.8,1.1,5,2.7,6.7c1.6,1.6,3.7,2.5,6.2,2.5c2,0,3.6-0.5,4.9-1.4
+										c1.3-0.9,2.7-2.7,4.3-5.2l6.7,3.7c-1,1.8-2.1,3.2-3.3,4.5c-1.1,1.2-2.4,2.3-3.7,3.1c-1.3,0.8-2.7,1.4-4.2,1.8
+										c-1.5,0.4-3.2,0.6-4.9,0.6c-5.1,0-9.2-1.6-12.3-4.9c-3.1-3.3-4.6-7.7-4.6-13.1c0-5.4,1.5-9.8,4.5-13.1c3-3.3,7-4.9,12-4.9
+										c5,0,9,1.6,11.9,4.8c2.9,3.2,4.3,7.6,4.3,13.2L129.7,320.9z M121.6,314.5c-1.1-4.2-3.7-6.3-7.9-6.3c-1,0-1.9,0.1-2.7,0.4
+										c-0.8,0.3-1.6,0.7-2.3,1.3c-0.7,0.5-1.3,1.2-1.8,2c-0.5,0.8-0.9,1.6-1.1,2.6H121.6z"/>
+										<path class="st0" d="M138.3,302h7.9v3c1.4-1.5,2.7-2.6,3.9-3.1c1.1-0.6,2.5-0.9,4.1-0.9c2.1,0,4.2,0.7,6.5,2l-3.6,7.2
+										c-1.5-1.1-3-1.6-4.4-1.6c-4.3,0-6.4,3.2-6.4,9.7v17.7h-7.9V302z"/>
+										<path class="st0" d="M184.9,307.8l-6.5,3.5c-1-2.1-2.3-3.1-3.8-3.1c-0.7,0-1.3,0.2-1.9,0.7c-0.5,0.5-0.8,1.1-0.8,1.8
+										c0,1.3,1.5,2.6,4.6,3.9c4.2,1.8,7,3.5,8.4,5c1.4,1.5,2.2,3.6,2.2,6.1c0,3.3-1.2,6-3.6,8.3c-2.4,2.1-5.2,3.2-8.5,3.2
+										c-5.7,0-9.8-2.8-12.1-8.4l6.7-3.1c0.9,1.6,1.6,2.7,2.1,3.1c1,0.9,2.1,1.3,3.4,1.3c2.7,0,4-1.2,4-3.6c0-1.4-1-2.7-3.1-3.9
+										c-0.8-0.4-1.6-0.8-2.4-1.2c-0.8-0.4-1.6-0.8-2.4-1.2c-2.3-1.1-3.9-2.2-4.8-3.4c-1.2-1.4-1.8-3.3-1.8-5.5c0-3,1-5.4,3-7.4
+										c2.1-1.9,4.6-2.9,7.6-2.9C179.6,301.1,182.8,303.3,184.9,307.8z"/>
+										<path class="st0" d="M248.4,290.1l-6.6,3.9c-1.2-2.1-2.4-3.5-3.5-4.2c-1.2-0.7-2.7-1.1-4.5-1.1c-2.3,0-4.1,0.6-5.6,1.9
+										c-1.5,1.3-2.2,2.8-2.2,4.8c0,2.6,2,4.8,5.9,6.4l5.4,2.2c4.4,1.8,7.6,3.9,9.6,6.5c2,2.6,3,5.7,3,9.4c0,5-1.7,9.1-5,12.3
+										c-3.3,3.3-7.5,4.9-12.4,4.9c-4.7,0-8.6-1.4-11.6-4.2c-3-2.8-4.9-6.7-5.6-11.7l8.3-1.8c0.4,3.2,1,5.4,2,6.6
+										c1.7,2.3,4.1,3.5,7.4,3.5c2.5,0,4.7-0.9,6.3-2.6c1.7-1.7,2.5-3.9,2.5-6.5c0-1-0.1-2-0.4-2.9s-0.7-1.7-1.4-2.4
+										c-0.6-0.7-1.4-1.4-2.4-2.1c-1-0.6-2.1-1.3-3.5-1.8l-5.2-2.2c-7.4-3.1-11.1-7.7-11.1-13.7c0-4.1,1.6-7.5,4.7-10.2
+										c3.1-2.8,7-4.1,11.6-4.1C240,281,244.9,284.1,248.4,290.1z"/>
+										<path class="st0" d="M256.5,318.8c0-4.9,1.8-9.1,5.3-12.6c3.5-3.5,7.8-5.2,12.9-5.2c5.1,0,9.4,1.7,13,5.2
+										c3.5,3.5,5.3,7.7,5.3,12.8c0,5.1-1.8,9.4-5.3,12.8c-3.5,3.4-7.9,5.1-13.1,5.1c-5.1,0-9.4-1.8-12.8-5.3
+										C258.2,328.4,256.5,324.1,256.5,318.8z M264.6,319c0,3.4,0.9,6.1,2.7,8.1c1.9,2,4.3,3,7.4,3c3.1,0,5.5-1,7.4-3
+										c1.8-2,2.8-4.6,2.8-7.9c0-3.3-0.9-6-2.8-7.9c-1.9-2-4.3-3-7.4-3c-3,0-5.4,1-7.3,3S264.6,315.8,264.6,319z"/>
+										<path class="st0" d="M309.4,309.4v26.7h-7.9v-26.7h-2.8V302h2.8v-13.2c0-4.3,0.7-7.3,2.2-9.1c2.1-2.5,5-3.7,9-3.7
+										c1.4,0,3.2,0.4,5.3,1.2v8.1l-0.8-0.4c-1.7-0.9-3.1-1.3-4.2-1.3c-1.4,0-2.3,0.5-2.8,1.5c-0.5,1-0.7,2.9-0.7,5.7V302h8.6v7.4H309.4z
+										"/>
+										<path class="st0" d="M333.2,309.4v26.7h-7.9v-26.7H322V302h3.4v-12.5h7.9V302h6.1v7.4H333.2z"/>
+									</g>
+								</g>
+							</svg>
 
-							</div>
+						</div>
 
-							<h4 style="text-align:left"><b>Under Construction</b></h4>
-							<p style="text-align: left">Our website is currently undergoing scheduled maintenance.
-								We Should be back shortly. Thank you for your patience.</p>
-							</section><!-- left-section -->
-
-							<section class="right-section" style="background-image: url(images/countdown-3-1600x900.jpg)">
-
+						<h4 style="text-align:left"><b>Under Construction</b></h4>
+						<p style="text-align: left">Our website is currently undergoing scheduled maintenance.
+							We Should be back shortly. Thank you for your patience.</p>
+						</section><!-- left-section -->
+						<!-- style="background-image: url(images/countdown-6-1600x900.jpg)" -->
+						<section class="right-section" >
+							<video autoplay muted loop id="myVideo">
+								<source src="images/flsvideo.mp4" type="video/mp4">
+								</video>
+								<!-- <button id="myBtn" onclick="myFunction()">Pause</button> -->
 								<div class="display-table center-text">
 									<div class="display-table-cell">
-<!--
+										<!--
 
 										<div id="rounded-countdown">
-											<div class="countdown" data-remaining-sec="2000000"></div>
-										</div> -->
+										<div class="countdown" data-remaining-sec="2000000"></div>
+									</div> -->
 
-									</div><!-- display-table-cell -->
-								</div><!-- display-table -->
+								</div><!-- display-table-cell -->
+							</div><!-- display-table -->
 
-							</section><!-- right-section -->
+						</section><!-- right-section -->
 
-						</div><!-- container -->
-					</div><!-- main-area -->
+					</div><!-- container -->
+				</div><!-- main-area -->
 
-					<!-- SCIPTS -->
-					<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
+				<!-- SCIPTS -->
+				<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
 
-					<script src="js/index.js"></script>
+				<script src="js/index.js"></script>
 
-					<script src="common-js/jquery-3.1.1.min.js"></script>
+				<script src="common-js/jquery-3.1.1.min.js"></script>
+				<script>
+				// Get the video
+				var video = document.getElementById("myVideo");
 
-					<script src="common-js/tether.min.js"></script>
+				// Get the button
+				var btn = document.getElementById("myBtn");
 
-					<script src="common-js/bootstrap.js"></script>
+				// Pause and play the video, and change the button text
+				function myFunction() {
+					if (video.paused) {
+						video.play();
+						btn.innerHTML = "Pause";
+					} else {
+						video.pause();
+						btn.innerHTML = "Play";
+					}
+				}
+				</script>
 
-					<script src="common-js/jquery.classycountdown.js"></script>
+				<script src="common-js/tether.min.js"></script>
 
-					<script src="common-js/jquery.knob.js"></script>
+				<script src="common-js/bootstrap.js"></script>
 
-					<script src="common-js/jquery.throttle.js"></script>
+				<script src="common-js/jquery.classycountdown.js"></script>
 
-					<script src="common-js/scripts.js"></script>
+				<script src="common-js/jquery.knob.js"></script>
 
-				</body>
-				</html>
+				<script src="common-js/jquery.throttle.js"></script>
+
+				<script src="common-js/scripts.js"></script>
+
+			</body>
+			</html>
