video height fixed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
+
 <head>
 	<title>Flyers soft</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,6 +25,7 @@
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
 
 	<div class="main-area">
@@ -37,7 +39,7 @@
 						<div class="main-content" style="color:#fff">
 
 
-							<div style="margin-left: -100px;">
+							<div>
 								<svg class="logoSVG" version="1.1"
 								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 474 250" preserveAspectRatio="xMidYMid meet" style="text-align:center;" >
 								<defs>
@@ -177,70 +179,71 @@
 								</g>
 							</svg>
 
-						</div>
+							</div>
 
-						<h4 style="text-align:left"><b>Under Construction</b></h4>
-						<p style="text-align: left">Our website is currently undergoing scheduled maintenance.
-							We Should be back shortly. Thank you for your patience.</p>
-						</section><!-- left-section -->
-						<!-- style="background-image: url(images/countdown-6-1600x900.jpg)" -->
-						<section class="right-section" >
-							<video autoplay muted loop id="myVideo">
+							<h4 style="text-align:left"><b>Under Construction</b></h4>
+							<p style="text-align: left">Our website is currently undergoing scheduled maintenance.
+								We Should be back shortly. Thank you for your patience.</p>
+			</section><!-- left-section -->
+			<!-- style="background-image: url(images/countdown-6-1600x900.jpg)" -->
+			<section class="right-section">
+				<video autoplay muted loop id="myVideo">
 								<source src="images/flsvideo.mp4" type="video/mp4">
 								</video>
-								<!-- <button id="myBtn" onclick="myFunction()">Pause</button> -->
-								<div class="display-table center-text">
-									<div class="display-table-cell">
-										<!--
+				<!-- <button id="myBtn" onclick="myFunction()">Pause</button> -->
+				<div class="display-table center-text">
+					<div class="display-table-cell">
+						<!--
 
 										<div id="rounded-countdown">
 										<div class="countdown" data-remaining-sec="2000000"></div>
 									</div> -->
 
-								</div><!-- display-table-cell -->
-							</div><!-- display-table -->
+					</div><!-- display-table-cell -->
+				</div><!-- display-table -->
 
-						</section><!-- right-section -->
+			</section><!-- right-section -->
 
-					</div><!-- container -->
-				</div><!-- main-area -->
+		</div><!-- container -->
+	</div><!-- main-area -->
 
-				<!-- SCIPTS -->
-				<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
+	<!-- SCIPTS -->
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
 
-				<script src="js/index.js"></script>
+	<script src="js/index.js"></script>
 
-				<script src="common-js/jquery-3.1.1.min.js"></script>
-				<script>
-				// Get the video
-				var video = document.getElementById("myVideo");
+	<script src="common-js/jquery-3.1.1.min.js"></script>
+	<script>
+		// Get the video
+		var video = document.getElementById("myVideo");
 
-				// Get the button
-				var btn = document.getElementById("myBtn");
+		// Get the button
+		var btn = document.getElementById("myBtn");
 
-				// Pause and play the video, and change the button text
-				function myFunction() {
-					if (video.paused) {
-						video.play();
-						btn.innerHTML = "Pause";
-					} else {
-						video.pause();
-						btn.innerHTML = "Play";
-					}
-				}
-				</script>
+		// Pause and play the video, and change the button text
+		function myFunction() {
+			if (video.paused) {
+				video.play();
+				btn.innerHTML = "Pause";
+			} else {
+				video.pause();
+				btn.innerHTML = "Play";
+			}
+		}
+	</script>
 
-				<script src="common-js/tether.min.js"></script>
+	<script src="common-js/tether.min.js"></script>
 
-				<script src="common-js/bootstrap.js"></script>
+	<script src="common-js/bootstrap.js"></script>
 
-				<script src="common-js/jquery.classycountdown.js"></script>
+	<script src="common-js/jquery.classycountdown.js"></script>
 
-				<script src="common-js/jquery.knob.js"></script>
+	<script src="common-js/jquery.knob.js"></script>
 
-				<script src="common-js/jquery.throttle.js"></script>
+	<script src="common-js/jquery.throttle.js"></script>
 
-				<script src="common-js/scripts.js"></script>
+	<script src="common-js/scripts.js"></script>
 
-			</body>
-			</html>
+</body>
+
+</html>
