video font changed

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
 							</div>
 
-							<h4 style="text-align:left"><b>Under Construction</b></h4>
+							<h4 style="text-align:left"><b>Coming Soon</b></h4>
 							<p style="text-align: left">Our website is currently undergoing scheduled maintenance.
 								We Should be back shortly. Thank you for your patience.</p>
 			</section><!-- left-section -->
