--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@
 
 	<div class="main-area">
 		<div class="container full-height position-static">
-
-			<section class="left-section full-height" style="background-color:#000;">
-
+<div class="row">
+			<section class="col-md-4 col-sm-4 col-xs-12 full-height" style="background-color:#000;margin-bottom: 50px;">
 
 				<div class="display-table">
 					<div class="display-table-cell">
 						<div class="main-content" style="color:#fff">
 
 
-							<div>
+							<div id="bird_svg">
 								<svg class="logoSVG" version="1.1"
 								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 474 250" preserveAspectRatio="xMidYMid meet" style="text-align:center;" >
 								<defs>
@@ -181,12 +180,12 @@
 
 							</div>
 
-							<h4 style="text-align:left"><b>Coming Soon</b></h4>
+							<h4 style="text-align:left; margin-bottom:10px;"><b>Coming Soon</b></h4>
 							<p style="text-align: left">Our website is currently undergoing scheduled maintenance.
 								We Should be back shortly. Thank you for your patience.</p>
 			</section><!-- left-section -->
 			<!-- style="background-image: url(images/countdown-6-1600x900.jpg)" -->
-			<section class="right-section">
+			<section class="col-md-8 col-sm-8 col-xs-12 full-height">
 				<video autoplay muted loop id="myVideo">
 								<source src="images/flsvideo.mp4" type="video/mp4">
 								</video>
@@ -203,7 +202,7 @@
 				</div><!-- display-table -->
 
 			</section><!-- right-section -->
-
+</div>
 		</div><!-- container -->
 	</div><!-- main-area -->
 
